--- a/app/views/patrials/_side_bar.html.erb
+++ b/app/views/patrials/_side_bar.html.erb
@@ -23,7 +23,9 @@
 </style>
 
 <% if @category %>
-  <%=  render "patrials/filter_form" %>
+  <div id="filter_form">
+    <%=  render "patrials/filter_form" %>
+  </div>
 <% end %>
 
 <div class="card">
