--- a/app/views/admin/categories/edit.html.erb
+++ b/app/views/admin/categories/edit.html.erb
@@ -1,5 +1,3 @@
-<h1>Editing Category</h1>
+<h1>Редактирование категории</h1>
 
 <%= render 'form', category: @category %>
-
-<%= link_to 'Back', admin_categories_path %>
