--- a/app/views/admin/categories/index.html.erb
+++ b/app/views/admin/categories/index.html.erb
@@ -1,18 +1,18 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Categories</h1>
+<h1>Категории</h1>
 
 <ul>
 <% @categories.roots.order(:position).each do |category| %>
   <li>
     <%= category.position %> <%= link_to category.name, edit_admin_category_path(category) %>
-    (<%= link_to 'Destroy', admin_category_path(category), method: :delete, data: { confirm: 'Are you sure?' } %>)
+    ( <%= link_to 'Удалить', admin_category_path(category), method: :delete, data: { confirm: 'Вы уверены, что хотите удалить категорию ' + category.name + '?' } %> )
   </li>
   <ul>
     <% category.children.each do |child| %>
       <li>
         <%= child.position %> <%= link_to child.name, edit_admin_category_path(child) %>
-        (<%= link_to 'Destroy', admin_category_path(child), method: :delete, data: { confirm: 'Are you sure?' } %>)
+        (<%= link_to 'Удалить', admin_category_path(child), method: :delete, data: { confirm: 'Вы уверены, что хотите удалить подкатегорию ' + child.name + '?' } %>)
       </li>
     <% end %>
   </ul>
@@ -21,4 +21,4 @@
 
 <br>
 
-<%= link_to 'New Category', new_admin_category_path %>
+<%= link_to '+ Довавить категорию', new_admin_category_path %>
