--- a/app/views/admin/categories/new.html.erb
+++ b/app/views/admin/categories/new.html.erb
@@ -1,5 +1,3 @@
-<h1>New Category</h1>
+<h1>Создание категории</h1>
 
 <%= render 'form', category: @category %>
-
-<%= link_to 'Back', admin_categories_path %>
