--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -41,7 +41,7 @@
   <% categories.order(:id).each do |category| %>
     <div class="col-3">
       <div class="card text-center">
-        <%= link_to image_tag(category.image.category_main_image_thumb.url, alt: 'Image', class: "img"), category %>
+        <%= link_to image_tag(category.image.url, alt: category.name, class: "img"), category %>
       </div>
     </div>
   <% end %>
