--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -3,6 +3,17 @@
     border-top: 0px;
     border-bottom: 1px solid #dee2e6
   }
+  .delete_product_from_cart {
+    color: black;
+    border: solid 1px black;
+    padding: 1px 4px;
+    border-radius: 50%;
+  }
+  .delete_product_from_cart:hover {
+    color: white;
+    background-color: black;
+    text-decoration: none;
+  }
 </style>
 
 <h1>Корзина товаров</h1>
@@ -12,7 +23,7 @@
   <tbody>
     <% @cart.cart_products.each do |cart_product| %>
       <tr>
-        <td><%= link_to image_tag(cart_product.product.attachments.first.category_main_image_thumb.url), cart_product.product %></td>
+        <td><%= link_to image_tag(cart_product.product.attachments.first.thumb.url), cart_product.product %></td>
         <td class="text-left">
           <div><%= link_to cart_product.product.name, cart_product.product %></div>
           <div style="font-size: 0.5rem"><%= cart_product.product.summary %></div>
@@ -24,19 +35,20 @@
         </td>
         <td><%= cart_product.product.price %> грн.</td>
         <td id="product_<%= cart_product.product.id %>_sum"><%= cart_product.total_product_sum %> грн.</td>
-        <td><%= link_to "delete", delete_product_from_cart_carts_url(cart_products_id: cart_product.id) %></td>
+        <td><%= link_to "X", delete_product_from_cart_carts_url(cart_products_id: cart_product.id), class: "delete_product_from_cart" %></td>
       </tr>
     <% end %>
       <tr>
-        <td colspan="4"></td>
-        <td colspan="1" id="total_cart_sum"><%= @cart.total_cart_sum %> грн.</td>
-        <td><%= link_to "delete_all", delete_all_products_from_cart_carts_path %></td>
+        <td colspan="4">Итого:</td>
+        <td colspan="2" id="total_cart_sum"><%= @cart.total_cart_sum %> грн.</td>
       </tr>
   </tbody>
 </table>
 
-<%= link_to "Оформить заказ", new_order_path() %>
-
+<div class="d-flex justify-content-between">
+  <%= link_to "Оформить заказ", new_order_path(), class: "btn btn-primary" %>
+  <%= link_to "Очистить корзину", delete_all_products_from_cart_carts_path, class: "btn btn-primary" %>
+</div>
 
 <script type="text/javascript">
   $('.cart_item_id').on('click', function(){
