--- a/app/views/orders/_edit_form.html.erb
+++ b/app/views/orders/_edit_form.html.erb
@@ -2,6 +2,15 @@
   .field {
     padding-bottom: 10px;
   }
+  <% if order.delivery == 'Доставка Новой Почтой' %>
+    .delivery {
+      display: block;
+    }
+  <% else %>
+    .delivery {
+      display: none;
+    }
+  <% end %>
 </style>
 
   <div class="row">
@@ -20,38 +29,37 @@
         <% end %>
 
         <div class="field">
-          <%= form.telephone_field :phone, value: (current_user.phone if current_user), placeholder: 'Телефон', class: "form-control", required: true %>
+          <%= form.telephone_field :phone, placeholder: 'Телефон', class: "form-control", required: true %>
         </div>
         <div class="field">
-          <%= form.email_field :email, value: (current_user.email if current_user), placeholder: 'Адрес электронной почты', class: "form-control", required: true %>
+          <%= form.email_field :email, placeholder: 'Адрес электронной почты', class: "form-control", required: true %>
         </div>
         <div class="field">
-          <%= form.text_field :first_name, value: (current_user.first_name if current_user), placeholder: 'Имя', class: "form-control", required: true %>
+          <%= form.text_field :first_name, placeholder: 'Имя', class: "form-control", required: true %>
         </div>
         <div class="field">
-          <%= form.text_field :last_name, value: (current_user.last_name if current_user), placeholder: 'Фамилия', class: "form-control", required: true %>
+          <%= form.text_field :last_name, placeholder: 'Фамилия', class: "form-control", required: true %>
         </div>
         <div class="field">
-          <%= form.select :payment, raw(
-            "<option>Наличными</option>
-            <option>На карту Приват Банка</option>
-            <option>Наложенный платеж</option>"
+          <%= form.select :payment, options_for_select(
+            ["Наличными",
+            "На карту Приват Банка",
+            "Наложенный платеж"], selected: order.payment
           ), {}, {class: "form-control"} %>
         </div>
         <div class="field">
-          <%= form.select :delivery, raw(
-            "<option>Самовывоз</option>
-            <option>Доставка Новой Почтой</option>"
+          <%= form.select :delivery, options_for_select(
+            ["Самовывоз", "Доставка Новой Почтой"], selected: order.delivery
           ), {}, {class: "form-control"} %>
         </div>
-        <div class="delivery" style="display: none;">
+        <div class="delivery">
           <input type="radio" name="delivery" value="departament" id="departament" checked>
           <label for="departament">На отделение</label>
           <input type="radio" name="delivery" value="address" id="address">
           <label for="address">На адрес</label>
 
           <div class="field">
-            <%= form.text_field :city, value: (current_user.city if current_user), list: "city_name", class: "form-control", placeholder: "Город" %>
+            <%= form.text_field :city, list: "city_name", class: "form-control", placeholder: "Город" %>
               <datalist id="city_name">
                 <option value="Boston">
                 <option value="Cambridge">
@@ -59,7 +67,7 @@
           </div>
 
           <div class="field" style="display: block" id="departament_field">
-            <%= form.text_field :departament, value: (current_user.departament if current_user), list: "departament_name", class: "form-control", placeholder: "Отделение Новой Почты" %>
+            <%= form.text_field :departament, list: "departament_name", class: "form-control", placeholder: "Отделение Новой Почты" %>
               <datalist id="departament_name">
                 <option value="№1 - тута">
                 <option value="№2 - тама">
@@ -81,7 +89,7 @@
           <%= form.text_area :discription, placeholder: "Примичания", class: "form-control" %>
         </div>
 
-        <%= form.submit "Оформить заказ", class: "btn btn-primary btn-block" %>
+        <%= form.submit "Обновить заказ", class: "btn btn-primary btn-block" %>
       <% end %>
     </div>
     <div class="col-8">
@@ -89,7 +97,7 @@
         <thead>
         </thead>
         <tbody>
-          <% @cart.cart_products.each do |cart_product| %>
+          <% @order.cart.cart_products.each do |cart_product| %>
             <tr>
               <td><%= link_to image_tag(cart_product.product.attachments.first.thumb.url), cart_product.product %></td>
               <td class="text-left">
@@ -105,7 +113,7 @@
           <% end %>
             <tr>
               <td colspan="4"></td>
-              <td colspan="1" id="total_cart_sum"><%= @cart.total_cart_sum %> грн.</td>
+              <td colspan="1" id="total_cart_sum"><%= @order.cart.total_cart_sum %> грн.</td>
             </tr>
         </tbody>
       </table>
