--- a/app/views/patrials/_products.html.erb
+++ b/app/views/patrials/_products.html.erb
@@ -8,7 +8,7 @@
 </style>
 
 <div class="row">
-  <% @category.products.each do |product| %>
+  <% @products.each do |product| %>
     <div class="col-4">
       <div class="card text-center">
         <div class="text-on-img">
