--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,43 +1,78 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<style media="screen">
+  .form-row>.col {
+    padding: 0 5px 10px 5px;
+  }
+</style>
 
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= render "devise/shared/error_messages", resource: resource %>
+<h2>Редактировать кабинет пользователя <%= link_to current_user.full_name, orders_path %> </h2>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
-  </div>
+<div class="row">
+  <div class="col-md-7 col-12">
+    <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= render "devise/shared/error_messages", resource: resource %>
 
-  <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-    <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
-  <% end %>
+      <div class="form-row">
+        <div class="col">
+          <%= f.text_field :phone, class: "form-control", placeholder: "Телефон" %>
+        </div>
 
-  <div class="field">
-    <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
-    <%= f.password_field :password, autocomplete: "new-password" %>
-    <% if @minimum_password_length %>
-      <br />
-      <em><%= @minimum_password_length %> characters minimum</em>
+        <div class="col">
+          <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "form-control", placeholder: "Адресс электронной почты" %>
+        </div>
+      </div>
+
+      <div class="form-row">
+        <div class="col">
+          <%= f.text_field :first_name, class: "form-control", placeholder: "Имя" %>
+        </div>
+
+        <div class="col">
+          <%= f.text_field :last_name, class: "form-control", placeholder: "Фамилия" %>
+        </div>
+      </div>
+
+      <h3>Доставка <em>не обязательно</em></h3>
+
+      <div class="form-row">
+        <div class="col">
+          <%= f.text_field :city, list: "city_name", class: "form-control", placeholder: "Город" %>
+            <datalist id="city_name">
+              <option value="Boston">
+              <option value="Cambridge">
+            </datalist>
+        </div>
+
+        <div class="col" style="display: block" id="departament_field">
+          <%= f.text_field :departament, list: "departament_name", class: "form-control", placeholder: "Отделение Новой Почты" %>
+            <datalist id="departament_name">
+              <option value="№1 - тута">
+              <option value="№2 - тама">
+            </datalist>
+        </div>
+      </div>
+
+      <h3>Замена пароля <em>оставьте пустым, если не хотите менять</em></h3>
+
+      <div class="form-row">
+        <div class="col">
+          <%= f.password_field :password, autocomplete: "new-password", class: 'form-control', placeholder: "Новый пароль" %>
+        </div>
+
+        <div class="col">
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", class: 'form-control', placeholder: "Подтверждение пароля" %>
+        </div>
+      </div>
+
+      <div class="actions">
+        <%= f.submit "Update", class: "btn btn-primary btn-block" %>
+      </div>
     <% end %>
   </div>
+  <div class="col-md-3 col-12 text-right">
+    <h3>Удалить аккаунт</h3>
 
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
+    <%= button_to "Удалить", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class: "btn btn-block btn-danger" %>
+
+    <%= link_to "Назад", :back %>
   </div>
-
-  <div class="field">
-    <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
-    <%= f.password_field :current_password, autocomplete: "current-password" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
