--- a/app/views/patrials/_header.html.erb
+++ b/app/views/patrials/_header.html.erb
@@ -65,13 +65,13 @@
         </div>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">О нас</a>
+        <a class="nav-link" href="/about_us">О нас</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Способы оплаты</a>
+        <a class="nav-link" href="/payments">Способы оплаты</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">Способы доставки</a>
+        <a class="nav-link" href="/delivery">Способы доставки</a>
       </li>
     </ul>
   </div>
