--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -52,6 +52,8 @@
         </div>
       </div>
 
+      <p>*Пароль прийдет на почту. Далее его можно будет сменить в личном кабинете.</p>
+
       <div class="actions">
         <%= f.submit "Зарегесирироваться", class: "btn btn-primary btn-block" %>
       </div>
