--- a/app/views/carts/product_to_cart.js.erb
+++ b/app/views/carts/product_to_cart.js.erb
@@ -1,4 +1,5 @@
 document.getElementById('cart_link_count').innerText = "<%= @cart.total_product_count %>"
-document.getElementById('cart_link').className = "btn btn-light"
-document.getElementById('cart_link').href = "/carts/<%= @cart.id %>"
+document.getElementById('cart_link').className = "btn"
+document.getElementById('cart_link').setAttribute("style", "background-color: yellow; color: #007bff !important; cursor: pointer")
+// document.getElementById('cart_link').href = "/carts/<%= @cart.id %>"
 document.getElementById('total_cart_sum').innerText = "<%= @cart.total_cart_sum %> грн."
