--- a/app/views/patrials/_side_bar.html.erb
+++ b/app/views/patrials/_side_bar.html.erb
@@ -6,6 +6,9 @@
   .card-header {
     font-size: 1rem;
     text-align: center;
+    color: yellow;
+    background-color: #007bff;
+    /* font-family: 'Russo One', sans-serif; */
   }
 
   .card-body {
