--- a/app/views/application/main.html.erb
+++ b/app/views/application/main.html.erb
@@ -17,14 +17,14 @@
   </ol>
   <div class="carousel-inner">
     <div class="carousel-item active">
-      <img class="d-block w-100 c-image" src="https://94.img.avito.st/640x480/4561893594.jpg" alt="First slide">
+      <img class="d-block w-100 c-image" src="uploads/carousel/2099993177_2099993177.jpg" alt="First slide">
     </div>
-    <div class="carousel-item">
+    <!-- <div class="carousel-item">
       <img class="d-block w-100 c-image" src="https://cdn-st1.rtr-vesti.ru/vh/pictures/hd/175/104/4.jpg" alt="Second slide">
     </div>
     <div class="carousel-item">
       <img class="d-block w-100 c-image" src="https://images.ua.prom.st/1820372724_igrovoj-kompyuter-intel.jpg" alt="Third slide">
-    </div>
+    </div> -->
   </div>
   <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
