--- a/app/views/patrials/_products.html.erb
+++ b/app/views/patrials/_products.html.erb
@@ -5,6 +5,10 @@
     width: 100%;
     top: 165px;
   }
+
+  .btn-outline-primary.button-detail:hover {
+    color: yellow;
+  }
 </style>
 
 <div class="row">
@@ -19,8 +23,8 @@
         <div class="card-body">
           <p class="card-text text-right" style="font-size: 1.5rem"><%= product.price %> грн.</p>
           <div class="row justify-content-between">
-            <%= link_to "Подробнее", product, class: "btn btn-outline-primary col-5", style: "margin: 0 10px;" %>
-            <%= link_to "В корзину", product_to_cart_carts_path(product_id: product.id), remote: true, class: "btn btn-warning col-5", style: "margin: 0 10px;" %>
+            <%= link_to "Подробнее", product, class: "btn btn-outline-primary button-detail col-5", style: "margin: 0 10px;" %>
+            <%= link_to "В корзину", product_to_cart_carts_path(product_id: product.id), remote: true, class: "btn btn-warning col-5", style: "margin: 0 10px; color: #007bff; background-color: yellow; border-color: yellow;" %>
           </div>
         </div>
       </div>
