--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -41,7 +41,9 @@
               <li><%= pp.property.name %>:</li>
             <% else %>
               <ul>
-                <li><%= pp.property.name %>: <%= pp.value %></li>
+                <% if pp.value? %>
+                  <li><%= pp.property.name %>: <%= pp.value %></li>
+                <% end %>
               </ul>
             <% end %>
           <% end %>
